<resources>
    <string name="app_name">flaxgt_individual_project_2</string>
    <string name="author">By: Griffin Flaxman</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="first_name_hint">first name</string>
    <string name="family_name_hint">family name</string>
    <string name="email_hint">example@example.com</string>
    <string name="password_hint">password</string>
    <string name="confirm_password_hint">confirm password</string>
    <string name="confirm_btn_text">Confirm</string>
    <string name="dob_hint">date of birth</string>
    <string name="first_name_tv_text">First Name</string>
    <string name="family_name_tv_text">Family Name</string>
    <string name="dob_tv_text">Date Of Birth</string>
    <string name="email_tv_text">Email</string>
    <string name="password_tv_text">Password</string>
    <string name="confirm_password_tv_text">Confirm Password</string>
    <string name="title">Quiz Application</string>
    <string name="username_tv_text">Username</string>
    <string name="start_quiz_btn_text">Start Quiz</string>
    <string name="rules_btn_text">Rules</string>
    <string name="show_stats_btn_text">Show Stats</string>
    <string name="rules_text">You will be taking a quiz that consists of five questions. To start the quiz, press the Start Quiz button. Once you click an answer, you will be prompted if you would like to save that answer. Once you complete the quiz, click the Submit button to get your results. If you would like to check how you did on previous quizzes, click the Show Stats button on the start page.</string>
    <string name="quiz_text">Quiz</string>
    <string name="question_1_text">Question 1\n\nWhat is 2+2?</string>
    <string name="question_2_text">\nQuestion 2\n\nWhat is 7+5?</string>
    <string name="question_3_text">\nQuestion 3\n\nWhat is 3*7?</string>
    <string name="question_4_text">\nQuestion 4\n\nWhat is 100*15?</string>
    <string name="question_5_text">\nQuestion 5\n\nPlease select all even numbers.</string>
    <string-array name="question_1_answers">
        <item>4</item>
        <item>22</item>
        <item>0</item>
        <item>5</item>
    </string-array>
    <string-array name="question_2_answers">
        <item>12</item>
        <item>75</item>
        <item>22</item>
        <item>57</item>
    </string-array>
    <string-array name="question_3_answers">
        <item>21</item>
        <item>22</item>
        <item>37</item>
        <item>10</item>
    </string-array>
    <string-array name="question_4_answers">
        <item>1500</item>
        <item>10015</item>
        <item>115</item>
        <item>11500</item>
    </string-array>
    <string-array name="question_5_answers">
        <item>100</item>
        <item>44</item>
        <item>43</item>
        <item>1000406036</item>
    </string-array>
    <string name="submit_quiz_btn_text">Submit Quiz</string>
    <string name="shared_preferences_file_path">/data/data/com.example.grift.flaxgt_individual_project_2/shared_prefs/userdata.xml</string>
    <string name="logout_btn_text">Logout</string>
</resources>
